--- a/NodejsConsoleApp1/NodejsConsoleApp1/package.json
+++ b/NodejsConsoleApp1/NodejsConsoleApp1/package.json
@@ -1,10 +1,15 @@
-{
+﻿{
   "name": "NodejsConsoleApp1",
   "version": "0.0.0",
   "description": "NodejsConsoleApp1",
   "main": "app.js",
   "author": {
-    "name": "cjm",
+    "name": "崔津铭",
     "email": ""
+  },
+  "dependencies": {
+    "log": "^1.4.0",
+    "md5": "^2.0.0",
+    "mysql": "^2.10.0"
   }
 }
